<?xml version="1.0" encoding="UTF-8" ?>

<resources>
  <string name="accountAdd">Add Library</string>
  <string name="accountCancel">Cancel</string>
  <string name="accountCardCreatorLabel">Don\'t have a library card?</string>
  <string name="accountCardCreatorSignUp">Create Card</string>
  <string name="accountCardCreatorSignUpMessage">E-kirjasto will use your location one time to verify your library service area.</string>
  <string name="accountCardCreatorDialogCancel">Cancel</string>
  <string name="accountCardCreatorDialogOpenSettings">Open Settings</string>
  <string name="accountCardCreatorDialogOpenSettingsMessage">E-kirjasto requires a one-time location check to create a virtual library card. Your location is currently not shared. To enable location access for E-kirjasto, please adjust your location settings.</string>
  <string name="accountCardCreatorDialogPermissionsMessage">To create your virtual library card, E-kirjasto will use your location one time to verify your library service area. Click \"OK\" to proceed.</string>
  <string name="accountCardCreatorLocationFailed">There was an error retrieving your location.</string>
  <string name="accountCOPPADeleteBooks">Delete books?</string>
  <string name="accountCOPPADeleteBooksConfirm">Changing your age will remove all books downloaded from the current account.</string>
  <string name="accountAgeVerification">Age Verification</string>
  <string name="accountCreationFailed">Library creation failed</string>
  <string name="accountCreationFailedMessage">The library could not be created.</string>
  <string name="accountDelete">Delete</string>
  <string name="accountEULAStatement">By signing in, you agree to the End User License Agreement.</string>
  <string name="accountLogin">Sign in</string>
  <string name="accountForgotPassword">Forgot your password?</string>
  <string name="accountWantChildCard">Want a card for your child?</string>
  <string name="accountCreateCard">Create Card</string>
  <string name="accountLoginAlternatives">Alternative Login Methods</string>
  <string name="accountLoginRequired">Please sign in to continue.</string>
  <string name="accountLoginWith">Sign in with %1$s</string>
  <string name="accountLogout">Sign out</string>
  <string name="accountPassword">Password</string>
  <string name="accountPasswordShow">Show %1$s</string>
  <string name="accountPickerTitle">Find Your Library</string>
  <string name="accountRegistryCreating">Creating a library…</string>
  <string name="accountRegistryEmpty">No libraries are available.</string>
  <string name="accountRegistryRefresh">Refresh</string>
  <string name="accountRegistryRetrieving">Retrieving libraries from registry…</string>
  <string name="accountRegistrySelect">Please select a library…</string>
  <string name="accountRegistryNoLocation">You can search for your library by name, branch location, or your own location.</string>
  <string name="accountReportIssue">Report an issue…</string>
  <string name="accounts">Libraries</string>
  <string name="accountsDelete">@string/accountDelete</string>
  <string name="accountsDeleteConfirm">Are you sure you want to remove \"%1$s\" from this device?</string>
  <string name="accountsDeleteConfirmTitle">Remove library</string>
  <string name="accountsDeletionFailed">Library deletion failed</string>
  <string name="accountsDeletionFailedMessage">The library could not be deleted.</string>
  <string name="accountsDetails">Details</string>
  <string name="accountSyncBookmarks">Sync bookmarks</string>
  <string name="accountUserName">User Name</string>
  <string name="accountCustomOPDS">Custom OPDS Feed URL</string>
  <string name="currentlyBrowsing">You\'re currently browsing</string>
  <string name="accountSAML20LoginLabel">Sign in with SAML 2.0 WEB SSO</string>
  <string name="accountSAML20NoAccessToken">Failed to retrieve an access token from the URI: %1$s</string>
  <string name="accountSAML20NoPatronInfo">Failed to retrieve patron info from the URI: %1$s</string>
  <string name="accountEkirjastoSuomiFiNoAccessToken">Failed to retrieve an access token from the URI: %1$s</string>
  <string name="accountSearchHint">Search accounts&#8230;</string>
  <string name="accountMore">More options</string>
  <string name="accountPasswordResetFailed">Sorry, we weren\'t able to find a usable app to reset your password. Please send email to %1$s if you need to report an issue.</string>
  <string name="accountReportFailed">Sorry, we weren\'t able to find a usable app to contact support. Please send email to %1$s if you need to report an issue.</string>
  <string name="accountPrivacyPolicy">Privacy Policy</string>
  <string name="accountLicenses">Content Licenses</string>
  <string name="accountEULA">End User License Agreement</string>
  <string name="accountMenuSearch">Search</string>
  <string name="accountMenuRefresh">Reload</string>
  <string name="accountEkirjastoSuomiFiLabel">Suomi.fi login</string>
  <string name="accountEkirjastoPassKeyLabel">Passkey login</string>
  <string name="accountEmail">E-mail address</string>
  <string name="accountEkirjastoLoggingInLabel">Signing in with %1$s</string>
  <string name="accountEkirjastoLoggedInLabel">Signed into E-kirjasto.</string>
  <string name="accountPasskeyCreate">Register a passkey</string>
  <string name="AccountTitle">Settings</string>
  <string name="app_version_string">E-kirjasto version %1$s</string>
  <string name="account_login_with_suomifi">Sign in with Suomi.fi</string>
  <string name="account_login_passkey">Sign in with a passkey</string>
  <string name="account_register_passkey">Register a passkey</string>
  <string name="account_surveys">User surveys</string>
  <string name="account_eula">User Agreement</string>
  <string name="account_licenses">Software Licenses</string>
  <string name="account_leave_feedback">Leave feedback</string>
  <string name="account_instructions">User instructions</string>
  <string name="account_accessibility_statement">Accessibility Statement</string>
  <string name="account_about_app">About App</string>
  <string name="account_sync_bookmarks_statement">Save your reading position and bookmarks to all your other devices</string>
  <string name="e_kirjasto_logo">E-Kirjasto logo</string>
  <string name="natlibfi_logo">National Library of Finland logo</string>
  <string name="account_application_language">Application language</string>
  <string name="restartPopupMessage">The language is applied the next time the application starts.</string>
  <string name="restartPopupTitle">Confirm changing application language?</string>
  <string name="restartPopupAgree">Confirm</string>
  <string name="restartPopupCancel">Cancel</string>
  <string name="buttonLanguage">Language options</string>
  <string name="buttonFontSize">Font size</string>
  <string name="buttonPreferences">Preferences</string>
  <string name="accountAllowPreferences">Enable preferences</string>
  <string name="buttonTextFinnish">Finnish</string>
  <string name="buttonTextSwedish">Swedish</string>
  <string name="buttonTextEnglish">English</string>
  <string name="fontSize">Font size</string>
  <string name="errorLoginFailed">Could not sign in</string>
  <string name="errorPasskeyLoginFailed">Could not sign in with Passkey</string>
  <string name="errorPasskeyRegisterFailed">Error registering a Passkey</string>
  <string name="errorPasskeyRegisterCancelled">Passkey registering cancelled</string>
  <string name="passkeyRegisterSuccessful">Passkey registered successfully</string>
  <string name="errorSuomiFiLoginFailed">Could not sign in with Suomi.fi</string>
  <string name="invite_a_dependent">Invite a Dependent</string>
  <string name="get_dependents">Get Dependents or Children</string>
  <string name="dependent_email">Dependent email</string>
  <string name="send_invitation">Send Invitation</string>
  <string name="select_dependent">Select a Dependent</string>
  <string name="invite_another_dependent">Invite another Dependent</string>
  <string name="no_dependents">No dependents or children found.</string>
  <string name="guidetext">Fill in an email where the invitation should be sent. Make sure to type it in correctly before sending.</string>
  <string name="thanks">Thank you! Your dependent should receive the invitation shortly if the email was entered correctly.\n\nThe link should be opened on their personal device. The link leads to website where they can register a passkey. This passkey can be used to enter e-kirjasto.</string>
  <string name="emailNotValid">Enter a Valid Email Address.</string>
  <string name="errorFromServer">Something went wrong. Sign out and back in and try again.</string>
  <string name="errorInCreation">Could not finish request. Check internet connection and try again.</string>
  <string name="logoutConfirmTitle">Sign out</string>
  <string name="logoutConfirmMessage">If you sign out, your downloads and any saved bookmarks will be removed.</string>
  <string name="logoutConfirmConfirm">Sign out</string>
  <string name="logoutConfirmCancel">Cancel</string>
</resources>
