<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:text="@string/invite_a_dependent"
        android:background="@color/EkirjastoLightGreen"
        android:textColor="@color/EkirjastoBlack"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonDependents"
        style="@style/Palace.Button.Outlined.Settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:text="@string/get_dependents"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        />

    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dependentsLoading"
        app:layout_constraintTop_toBottomOf="@id/buttonDependents"/>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="18dp"
        app:layout_constraintTop_toBottomOf="@id/dependentsLoading"
        tools:layout_editor_absoluteX="-78dp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dependent_email"
        android:inputType="textEmailAddress"
        android:padding="20dp"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dependentInfoText" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/send"
        style="@style/Palace.Button.Outlined.Settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:text="@string/send_invitation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <TextView
        android:id="@+id/dependentInfoText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/EkirjastoLightestGrey"
        android:padding="20dp"
        android:text="@string/guidetext"
        android:textAlignment="center"
        android:textColor="@color/EkirjastoBlack"
        android:textSize="12sp"
        app:layout_constraintTop_toBottomOf="@id/spinner" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/invMoreDependents"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Palace.Button.Outlined.Settings"
        app:layout_constraintTop_toBottomOf="@id/dependentInfoText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"
        android:text="@string/invite_another_dependent"/>


</androidx.constraintlayout.widget.ConstraintLayout>
