<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/accountSyncBookmarks"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="32dp"
            android:background="@color/EkirjastoSettingsBookmarkBackground">

            <TextView
                android:id="@+id/enableUserPreferencesLabel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:labelFor="@id/accountAllowPreferencesCheck"
                android:text="@string/accountAllowPreferences"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/accountAllowPreferencesCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp"
                android:label="@id/enableUserPreferencesLabel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonLanguage"
            style="@style/Palace.Button.Outlined.Settings.Arrowed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonLanguage" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonFontSize"
            style="@style/Palace.Button.Outlined.Settings.Arrowed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buttonFontSize" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>