<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/logoEkirjasto"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:contentDescription="Ekirjasto Logo"
                    android:src="@drawable/ekirjasto_logo"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textEkirjastoFi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="8dp"
                    android:text="e-kirjasto"
                    android:textAllCaps="true"
                    app:layout_constraintBottom_toTopOf="@+id/textEkirjastoSv"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/logoEkirjasto"
                    app:layout_constraintTop_toTopOf="@+id/logoEkirjasto" />

                <TextView
                    android:id="@+id/textEkirjastoSv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="e-biblioteket"
                    android:textAllCaps="true"
                    app:layout_constraintBottom_toTopOf="@+id/textEkirjastoEn"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/logoEkirjasto"
                    app:layout_constraintTop_toBottomOf="@+id/textEkirjastoFi" />

                <TextView
                    android:id="@+id/textEkirjastoEn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="0dp"
                    android:text="e-library"
                    android:textAllCaps="true"
                    app:layout_constraintBottom_toBottomOf="@+id/logoEkirjasto"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/logoEkirjasto"
                    app:layout_constraintTop_toBottomOf="@+id/textEkirjastoSv" />


            </androidx.constraintlayout.widget.ConstraintLayout>





        </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonLogout"
        android:text="@string/accountLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonLoginSuomiFi"
        android:text="Login with Suomi.FI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonLoginPasskey"
        android:text="Login with Passkey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonRegisterPasskey"
        android:text="Register Passkey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/eula_statement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/accountEULAStatement"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/accountSyncBookmarks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/PalaceDividerColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/accountSyncBookmarksLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:labelFor="@id/accountSyncBookmarksCheck"
            android:text="@string/accountSyncBookmarks"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/accountSyncProgress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/accountSyncProgress"
            style="?android:attr/progressBarStyle"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:indeterminate="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/accountSyncBookmarksCheck"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/accountSyncBookmarksCheck"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:enabled="false"
            android:label="@id/accountSyncBookmarksLabel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/accountReportIssueText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Leave feedback"/>
        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="32dp"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonAboutApp"
            android:text="About App"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonPrivacyPolicy"
            android:text="@string/accountPrivacyPolicy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonUserAgreement"
            android:text="User Agreement"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonLicenses"
            android:text="Software Licenses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/app_version"
            android:text="E-Kirjasto version 1.0.28 (167)"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>


</ScrollView>